tests/miniJava/neg/006175_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { String if ( 0 ) { } else { } } }
